[POKER-3] Basic data model with sqlalchemy
debug mode with socketio + connexion stays a problem
Starting by flask run target from intellij works - but hot reload is broken
